fixed function to make navbar fixed-top only on smaller screens; added function to hide sidebar when changing device orientation to a larger screen

--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,5 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    transition: all 0.3s ease;
 }
 
 .navbar {
@@ -21,6 +20,7 @@ body {
 @media only screen and (min-width: 320px) and (max-width: 770px) {
     body {
         padding-top: 60px;
+        transition: all 0.3s ease;
     }
 
     .navbar-toggler:hover{
@@ -118,6 +118,7 @@ body {
 @media only screen and (min-width: 800px) and (max-width: 970px){
     body {
         padding-top: 70px;
+        transition: all 0.3s ease;
     }
 
     .navbar-toggler:hover{
@@ -204,13 +205,15 @@ body {
     }
     
     .nav-item {
+        position: relative;
         font-size: 20px;
+        margin-right: 5%;
     }
 
     .nav-item:hover, .active{
         border-radius: 50px;
         background-color: rgb(63, 63, 63);
-        font-weight: bold;
+        // font-weight: bold;
     }
 }
 
